Improved alignment of safari fix

--- a/src/components/Player/menu.css
+++ b/src/components/Player/menu.css
@@ -61,7 +61,7 @@
     width: 100%;
     height: 100%;
     z-index: 1000;
-    position: absolute;
+    position: fixed;
     display: none;
     justify-content: center;
     align-items: center;
