--- a/src/components/SheetVisualizer/SheetFrame.module.css
+++ b/src/components/SheetVisualizer/SheetFrame.module.css
@@ -24,12 +24,14 @@
 	width: 100%;
 	height: 100%;
 	border: solid var(--primary) 0.18rem;
-	padding-bottom: 50%;
+	padding-bottom: 60%;
 	position: relative;
 }
-
+.frame-outer-smaller{
+	padding-bottom: 49%;
+}
 /*
-@supports(aspect-ratio: 1.5) {
+@supports(aspect-ratio: 1.5) { //apparently ios has a bug with aspect-ratio...
 	.frame-outer {
 		padding: unset;
 		aspect-ratio: 1.5;
@@ -74,6 +76,9 @@
 .visualizer-ball div {
 	width: 0.5rem;
 	height: 0.5rem;
+	position: absolute;
+	top: calc(50% - 0.25rem);
+	left: calc(50% - 0.25rem);
 	background-color: #606876;
 	border-radius: 50%;
 	opacity: 0.5;
